--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,13 @@
-.box {
-    text-align: center;
-    background-color: aliceblue;
+#mainChessBoard
+{
+    width:320px;
+    height:320px;
+    border:1px solid black;
 }
 
-.conteiner h1 {
-    text-align: center;
-}
-
-.contered {
-    display: inline-block;
-    margin: 0;
-}
-
-.chess-board {
-    border-spacing: 0;
-    border-collapse: collapse;
-    margin: auto;
-} 
-
-.chess-board th {
-    padding: 1em;
-}
-
-.chess-board td {
-    border: 1px solid;
-    width: 5em;
-    height: 5em;
-    text-align: center;
-    vertical-align: middle;
-}
-
-.chess-board .white {
-    background-color: white;
-}
-
-.chess-board .black {
-    background-color: black;
+div
+{
+ width:40px;
+ height:40px;
+ float:left;
 }
