--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,23 @@
-#mainChessBoard
-{
-    width:320px;
-    height:320px;
-    border:1px solid black;
+#chessBoard{
+    display: inline-block;
+    border: 2px outset lightGray;
 }
 
-div
-{
- width:40px;
- height:40px;
- float:left;
+#chessBoard div{
+    line-height: 1px;
+}
+
+#chessBoard span{
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+}
+
+#chessBoard div:nth-child(odd) span:nth-child(even),
+#chessBoard div:nth-child(even) span:nth-child(odd){
+    background-color: black;
+}
+#chessBoard div:nth-child(even) span:nth-child(even),
+#chessBoard div:nth-child(odd) span:nth-child(odd){
+    background-color: snow;
 }
