--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,24 @@
 #chessBoard{
     display: inline-block;
     border: 2px outset lightGray;
-}
-
-#chessBoard div{
+  }
+  
+  #chessBoard div{
     line-height: 1px;
-}
-
-#chessBoard span{
+  }
+  
+  #chessBoard span{
     display: inline-block;
     width: 32px;
     height: 32px;
-}
-
-#chessBoard div:nth-child(odd) span:nth-child(even),
-#chessBoard div:nth-child(even) span:nth-child(odd){
+  }
+  
+  #chessBoard div:nth-child(odd) span:nth-child(even),
+  #chessBoard div:nth-child(even) span:nth-child(odd){
     background-color: black;
-}
-#chessBoard div:nth-child(even) span:nth-child(even),
-#chessBoard div:nth-child(odd) span:nth-child(odd){
-    background-color: snow;
-}
+  }
+  #chessBoard div:nth-child(even) span:nth-child(even),
+  #chessBoard div:nth-child(odd) span:nth-child(odd){
+    background-color: white;
+    content: "\A"
+  }
